# Just_a_Graph

./: CMakeLists.txt  README.md
files/: dag.dot  prufer.dot
io/: iocoloring.c  iocomponents.c  iodag.c  iodfsbfs.c  iodot.h  iohelper.c  iohuffman.c  iopath.c  ioprufer.c  iospanningtrees.c  iotopo.c
libfdr/: CMakeLists.txt  dllist.c  fields.c  fields.h  jrb.c  jrb.h  jval.c  jval.h
src/: CMakeLists.txt  coloring.c  coloring.h  components.c  components.h  graph.c  graph.h  huffman.c  huffman.h  prufer.c  prufer.h  spanningTrees.c  spanningTrees.h
tests/: randomGraph.c
tests/graphviz-tests/: iocomponentsTest.c  iodagTest.c  iohuffmanTest.c  iopathTest.c  iopruferTest.c  iospanningtreesTest.c  iotopoTest.c  iotraversalTest.c
tests/static-tests/: coloringTest.c  connectedTest.c  dfsBfsTest.c  huffmanTest.c  pruferTest.c  shortestPathTest.c  spanningTreesTest.c  topoTest.c
