project(Graph-LIB C)
add_subdirectory(libfdr fdr)
add_subdirectory(src graph)

add_executable(topoTest ./tests/static-tests/topoTest.c)
add_executable(dfsBfsTest ./tests/static-tests/dfsBfsTest.c)
add_executable(shortestPathTest ./tests/static-tests/shortestPathTest.c)
add_executable(coloringTest ./tests/static-tests/coloringTest.c)
add_executable(connectedTest ./tests/static-tests/connectedTest.c)
add_executable(huffmanTest ./tests/static-tests/huffmanTest.c)
add_executable(pruferTest ./tests/static-tests/pruferTest.c)
add_executable(spanningTreesTest ./tests/static-tests/spanningTreesTest.c)

target_link_libraries(topoTest graph fdr)
target_link_libraries(dfsBfsTest graph fdr)
target_link_libraries(shortestPathTest graph fdr)
target_link_libraries(coloringTest graph fdr)
target_link_libraries(connectedTest graph fdr)
target_link_libraries(huffmanTest graph fdr)
target_link_libraries(pruferTest graph fdr)
target_link_libraries(spanningTreesTest graph fdr)

add_executable(iotopoTest ./tests/graphviz-tests/iotopoTest.c ./io/iotopo.c ./io/iohelper.c)
add_executable(iotraversalTest ./tests/graphviz-tests/iotraversalTest.c ./io/iodfsbfs.c ./io/iohelper.c)
add_executable(iopathTest ./tests/graphviz-tests/iopathTest.c ./io/iopath.c ./io/iohelper.c)
add_executable(iodagTest ./tests/graphviz-tests/iodagTest.c ./io/iodag.c ./io/iohelper.c)
add_executable(iocomponentsTest ./tests/graphviz-tests/iocomponentsTest.c ./io/iocomponents ./io/iohelper.c)
add_executable(iohuffmanTest ./tests/graphviz-tests/iohuffmanTest.c ./io/iohuffman.c ./io/iohelper.c)
add_executable(iospanningTreesTest ./tests/graphviz-tests/iospanningtreesTest.c ./io/iospanningtrees.c ./io/iohelper.c)
add_executable(iopruferTest ./tests/graphviz-tests/iopruferTest.c ./io/ioprufer.c ./io/iohelper.c)

target_link_libraries(iotopoTest graph fdr)
target_link_libraries(iotraversalTest graph fdr)
target_link_libraries(iopathTest graph fdr)
target_link_libraries(iodagTest graph fdr)
target_link_libraries(iocomponentsTest graph fdr)
target_link_libraries(iohuffmanTest graph fdr)
target_link_libraries(iospanningTreesTest graph fdr)
target_link_libraries(iopruferTest graph fdr)